--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -18,7 +18,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <img class="images" src="./assets/icon/logo1.png"/>
+      <img class="images" src="./assets/icon/logo.png"/>
       
     </ion-toolbar>
   </ion-header>
