--- a/src/app/create-listing/create-listing.page.html
+++ b/src/app/create-listing/create-listing.page.html
@@ -5,8 +5,6 @@
     </ion-buttons>
     <ion-title>Create a Listing</ion-title>
   </ion-toolbar>
-  
- 
 </ion-header>
 
 <ion-content>
@@ -23,7 +21,7 @@
     <br>
     <ion-input placeholder="Condition"></ion-input>
     <br>
-    <ion-input placeholder="Blank"></ion-input>
+    <ion-input placeholder="Location"></ion-input>
     
   </ion-item>
   <ion-button color="secondary" expand="full" routerLink="/home" routerDirection="forward">
