--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,13 +10,14 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <img class="images" src="./assets/icon/logo1.png"/>
+      <!-- App Logo -->
+      <img class="images" src="./assets/icon/logo.png"/>
       <br>
-     
+     <!-- Buttons to login to the app -->
       <ion-button color="secondary" routerLink="/log-in" routerDirection="forward">
         Login
       </ion-button>
-
+<!-- Create a Listing in the app -->
       <ion-button color="secondary" routerLink="/create-listing" routerDirection="forward">
         Create a Listing
       </ion-button>
@@ -29,31 +30,30 @@
 <ion-searchbar showCancelButton="focus" color="secondary" animated></ion-searchbar>
 
 
-
-
-  <ion-button>
-    <ion-icon slot="start" name="car"></ion-icon>
+<!-- Catagory Buttons -->
+  <ion-button routerLink="/cars" routerDirection="forward">
+    <ion-icon slot="start" name="car" ></ion-icon>
     Cars
   </ion-button>
-  <ion-button>
+  <ion-button routerLink="/sports" routerDirection="forward">
     <ion-icon slot="start" name="barbell"></ion-icon>
     Sports
   </ion-button>
-  <ion-button>
+  <ion-button routerLink="/bikes" routerDirection="forward">
     <ion-icon slot="start" name="bicycle"></ion-icon>
     Bikes
   </ion-button>
-  <ion-button>
+  <ion-button routerLink="/furniture" routerDirection="forward">
     <ion-icon slot="start" name="bed"></ion-icon>
    Furniture
   </ion-button>
   
-  <ion-button>
+  <ion-button routerLink="/gaming" routerDirection="forward">
     <ion-icon slot="start" name="game-controller"></ion-icon>
    Console & Games
   </ion-button>
 
- <h4> <center>This for sale in your area</center></h4> 
+ <h4> <center>For sale in your area</center></h4> 
  <ion-grid>
   <ion-row>
     <ion-col>
@@ -74,10 +74,17 @@
   </ion-row>
 </ion-grid>
 
+<!-- Geolocation API -->
+<ion-list>
+  <ion-item *ngFor="let locat of LocatData"> <ion-label color="primary">{{locat.city}}</ion-label> </ion-item>
+</ion-list>
+
+
+<!-- Listing on the app -->
  <ion-card>
   <ion-card-header>
-    <img class="images" src="./assets/icon/one.jpeg"/>
-    <ion-card-subtitle color="danger" >€50</ion-card-subtitle>
+    <img class="images" src="https://photos.donedeal.ie/ddimg/YTFjNThmNGI2MGFkNmYzNTQxYWUwYzNkYmM2MmJkMGJ9lRdTOW84QTkG1_hfhPvoaHR0cDovL3MzLWV1LXdlc3QtMS5hbWF6b25hd3MuY29tL2RvbmVkZWFsLmllLXBob3Rvcy9waG90b18xNzkzOTczNzF8fHx8fHw2MDB4NDUwfHx8fHw=.jpeg"/>
+    <ion-card-subtitle color="danger" >€150</ion-card-subtitle>
     <ion-card-title>Mountain Bike</ion-card-title>
     <ion-text  >
       <p> Good condition, great for all surfaces, reason for selling...</p>
@@ -89,13 +96,13 @@
 </ion-card>
 <ion-card>
   <ion-card-header>
-    <img class="images" src="./assets/icon/two.jpeg"/>
+    <img class="images" src="https://photos.donedeal.ie/ddimg/ODVjMmY0Njc0NzYwN2NmZWQ1OGQ4NDg1M2QxNjI2ODR4sb8Ywz_LpKdTlQlWXod8aHR0cDovL3MzLWV1LXdlc3QtMS5hbWF6b25hd3MuY29tL2RvbmVkZWFsLmllLXBob3Rvcy9waG90b18xNzk2MDM5MjN8fHx8fHw2MDB4NDUwfHx8fHw=.jpeg"/>
     <ion-card-subtitle color="danger">€1,500</ion-card-subtitle>
-    <ion-card-title>06 Audi A3</ion-card-title>
+    <ion-card-title>12 Audi A3</ion-card-title>
     <ion-text  >
       <p> All working fine, new timing belt installed, need it gone today...</p>
     </ion-text>
-    <ion-button color="primary" routerLink="/log-in" routerDirection="forward">
+    <ion-button color="primary" routerLink="/view-listing" routerDirection="forward">
       Buy Now
     </ion-button>
   </ion-card-header>
@@ -119,7 +126,7 @@
 
 <ion-card>
   <ion-card-header>
-    <img class="images" src="./assets/icon/Four.jpeg"/>
+    <img class="images" src="https://photos.donedeal.ie/ddimg/MWVhY2RjODE2NGFjOTMxMjFlMWEyNDc3ZTEzZTI0NTOrzwCG31uDQNNTBhQROUwSaHR0cDovL3MzLWV1LXdlc3QtMS5hbWF6b25hd3MuY29tL2RvbmVkZWFsLmllLXBob3Rvcy9waG90b18xNzgyNzExMTB8fHx8fHw2MDB4NDUwfHx8fHw=.jpeg"/>
     <ion-card-subtitle color="danger">€5,250</ion-card-subtitle>
     <ion-card-title>Jetski 1100 STX Kawasaki</ion-card-title>
     <ion-text  >
@@ -133,4 +140,23 @@
     </ion-button>
   </ion-card-header>
 </ion-card>
+
+<ion-card>
+  <ion-card-header>
+  
+    <img class="images" src="https://photos.donedeal.ie/ddimg/MGIxYTU2ZWYyYTNiYjRjOGJmMTc4YjU5YTZhODkyZGZ77lkfsXxk03jFH62Xe7eHaHR0cDovL3MzLWV1LXdlc3QtMS5hbWF6b25hd3MuY29tL2RvbmVkZWFsLmllLXBob3Rvcy9waG90b18xNzkzOTkwMTR8fHw2MDB4NjAwfHx8fHx8fHw=.jpeg"/>
+    <ion-card-subtitle color="danger">€25,250</ion-card-subtitle>
+    <ion-card-title>Bmw Sports</ion-card-title>
+    <ion-text  >
+      <p> BMW for sale
+        going perfect
+        need gone
+       </p>
+    </ion-text>
+    <ion-button color="primary" routerLink="/log-in" routerDirection="forward">
+      Buy Now
+    </ion-button>
+  </ion-card-header>
+</ion-card>
+
 </ion-content>
