--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -5,13 +5,8 @@
     </ion-buttons>
     <ion-title>
      register
-    </ion-title><ion-header>
-      
-        
-      
+    </ion-title><ion-header>   
     </ion-header>
-    
-    
   </ion-toolbar>
 </ion-header>
 
@@ -50,7 +45,7 @@
       <ion-input type="password"></ion-input>
     </ion-item>
   <BR>
-  <ion-button expand="full" color="secondary" routerLink="/home" routerDirection="forward">
+  <ion-button expand="full" color="secondary" routerLink="/shipping" routerDirection="forward">
     Register
   </ion-button>
   <br>
