--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -76,7 +76,7 @@
 
 <!-- Geolocation API -->
 <ion-list>
-  <ion-item *ngFor="let locat of LocatData"> <ion-label color="primary">{{locat.city}}</ion-label> </ion-item>
+ <ion-item *ngFor="let locat of LocatData"> <ion-label color="primary">{{locat.city}}</ion-label> </ion-item>
 </ion-list>
 
 
@@ -102,7 +102,7 @@
     <ion-text  >
       <p> All working fine, new timing belt installed, need it gone today...</p>
     </ion-text>
-    <ion-button color="primary" routerLink="/view-listing" routerDirection="forward">
+    <ion-button color="primary" routerLink="/log-in" routerDirection="forward">
       Buy Now
     </ion-button>
   </ion-card-header>
