--- a/src/app/log-in/log-in.page.html
+++ b/src/app/log-in/log-in.page.html
@@ -36,7 +36,7 @@
       <ion-input type="password"></ion-input>
     </ion-item>
   <BR>
-  <ion-button expand="full" color="secondary" routerLink="/home" routerDirection="forward">
+  <ion-button expand="full" color="secondary" routerLink="/shipping" routerDirection="forward">
     Login
   </ion-button>
   <br>
